--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "^7.0.27",
     "@types/react": "^15.0.26",
     "@types/react-dom": "^15.5.0",
+    "deeplearn": "^0.1.0",
     "paralleljs": "^0.2.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
