--- a/package.json
+++ b/package.json
@@ -1,27 +1,12 @@
 {
-  "name": "editor-experiments",
+  "name": "live-neat",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@types/jest": "^19.2.4",
     "@types/node": "^7.0.27",
-    "@types/react": "^15.0.26",
-    "@types/react-dom": "^15.5.0",
-    "colyseus.js": "^0.7.0",
     "deeplearn": "^0.1.0",
-    "lance-gg": "^1.0.10",
     "paralleljs": "^0.2.1",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
     "tensorfire": "^0.9.1"
-  },
-  "devDependencies": {
-    "react-scripts-ts": "2.2.0"
-  },
-  "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
   }
 }
