--- a/package.json
+++ b/package.json
@@ -3,10 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "^19.2.4",
     "@types/node": "^7.0.27",
     "deeplearn": "^0.1.0",
     "paralleljs": "^0.2.1",
     "tensorfire": "^0.9.1"
+  },
+  "devDependencies": {
+    "ts-loader": "^2.3.4",
+    "typescript": "^2.5.2",
+    "webpack": "^3.5.6",
+    "webpack-dev-server": "^2.7.1"
+  },
+  "scripts": {
+    "start": "webpack-dev-server",
+    "tsc": "tsc"
   }
 }
