--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "outDir": "build/dist",
     "module": "commonjs",
     "target": "es6",
-    "lib": ["es6", "dom"],
+    "lib": ["es2017.object", "es7", "dom"],
     "sourceMap": true,
     "moduleResolution": "node",
     "rootDir": "src",
