--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "@types/chai": "^4.0.4",
     "@types/mocha": "^2.2.42",
     "@types/node": "^7.0.27",
+    "chalk": "^2.1.0",
     "deeplearn": "^0.1.0",
     "fp-ts": "^0.5.2",
     "immutable": "4.0.0-rc.2",
     "paralleljs": "^0.2.1",
+    "simple-statistics": "^5.0.0",
     "tensorfire": "^0.9.1",
-    "ts-node": "^3.3.0"
+    "ts-node": "^3.3.0",
+    "tslib": "^1.7.1"
   },
   "devDependencies": {
     "ts-loader": "^2.3.4",
