--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "@types/mocha": "^2.2.42",
     "@types/node": "^7.0.27",
     "chalk": "^2.1.0",
+    "collectable": "^0.23.0",
     "deeplearn": "^0.1.0",
-    "fp-ts": "^0.5.2",
+    "fp-ts": "^0.5.4",
     "immutable": "4.0.0-rc.2",
+    "immutable-sorted": "^0.1.0",
     "inversify": "^4.3.0",
     "io-ts": "^0.7.1",
     "paralleljs": "^0.2.1",
+    "ramda": "^0.25.0",
     "simple-statistics": "^5.0.0",
     "tensorfire": "^0.9.1",
     "ts-node": "^3.3.0",
